--- a/server/templates/_base.html
+++ b/server/templates/_base.html
@@ -16,7 +16,11 @@
 </head>
 <body>
 <header class="grid-margins">
-    <div id="header-left"></div>
+    <div id="header-left">
+        <div id="school-logo" class="school-logo">
+            <img src="{{ url_for("static", filename="img/school-logo.png") }}" alt="School Logo">
+        </div>
+    </div>
     <div id="header-centre">
         <nav>
             <div>
