Games related styling

--- a/server/static/css/dark_colours.css
+++ b/server/static/css/dark_colours.css
@@ -52,3 +52,12 @@ a {
 .test {
     color: var(--text-secondary);
 }
+
+.gallery-item {
+    background-color: var(--yellow-1);
+}
+
+.gallery-item-details {
+    color: var(--text-primary);
+    background-color: var(--yellow-1);
+}
