--- a/server/templates/games/game.html
+++ b/server/templates/games/game.html
@@ -1,6 +1,6 @@
 {% extends "_base.html" %}
 
-{% block title %}{{ game.title }}{% endblock %}
+{% block title %}{{ game.name }}{% endblock %}
 
 {% block styles %}
     <link rel="stylesheet" href="{{ url_for("static", filename="css/games.css") }}">
