--- a/server/static/css/games.css
+++ b/server/static/css/games.css
@@ -1,6 +1,6 @@
 #main {
     display: grid;
-    grid-template-columns: 1fr 4fr 3fr; /* 3 columns, left and right are for shoulder space, middle is main */
+    grid-template-columns: 0.8fr 4fr 1fr; /* 3 columns, left and right are for shoulder space, middle is main */
 }
 
 #left {
@@ -12,19 +12,24 @@
 }
 
 #right {
+    margin-right: 2vw;
+}
 
+h1 {
+    font-size-adjust: 1.3;
 }
 
 .banner {
-    display: block;
     max-height: 20vh;
-    float: right;
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
 }
 
 .banner img {
     /* DO NOT STRETCH THE IMAGE */
-    object-fit: cover;
-    max-width: 30vw;
+    max-width: 100%;
+    align-self: center;
 }
 
 .gallery-item-details {
