--- a/server/templates/games/game.html
+++ b/server/templates/games/game.html
@@ -8,8 +8,59 @@
 
 {% block content %}
     <section id="main" class="grid-margins">
-        <div id="left">
-            <h1>Details</h1>
+        <div id="left"></div>
+        <div id="centre">
+            <h1>{{ game.name }}</h1>
+            <div class="banner centred">
+                <img src="{{ game.background_image }}" alt="<strong>{{ game.title }}</strong> background image">
+            </div>
+            <div id="description">
+                <h3>Description</h3>
+                {{ game.description|safe }} <!-- For some reason, rawg wraps their game descriptions in p tags. -->
+            </div>
+            <div id="reviews">
+                <h3>Reviews</h3>
+                <ul>
+                    <li>Metacritic: {{ game.metacritic }}</li>
+                    <li>Average User Rating: {{ game.rating }}</li>
+                    <li>Review count: {{ game.ratings_count }}</li>
+                </ul>
+            </div>
+            <div id="see-also">
+                <!-- This is a list of games that this game is a parent of (or child of). -->
+                <h3>See Also</h3>
+                <ul>
+                    {% for game in game.parent_games %}
+                        <li>
+                            <a href="{{ url_for("games.game", slug=game.slug) }}">
+                                {{ game.name }}
+                            </a>
+                        </li>
+                    {% endfor %}
+                    {% for game in game.child_games %}
+                        <li>
+                            <a href="{{ url_for("games.game", slug=game.slug) }}">
+                                {{ game.name }}
+                            </a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div id="stores">
+                <h3>Stores</h3>
+                <ul>
+                    {% for store in game.stores %}
+                        <li>
+                            <a href="https://{{ store.store.domain }}">
+                                {{ store.store.name }}
+                            </a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+        <div id="right">
+            <h2>Details</h2>
             <table>
                 <tr>
                     <th>Keys</th>
@@ -121,54 +172,6 @@
                         <img src="{{ url_for("static", filename="img/ratings/rating-pending.svg") }}" alt="Rating Pending">
                     {% endif %}
                 </div>
-            </div>
-        </div>
-        <div id="centre">
-            <h1>{{ game.name }}</h1>
-            {{ game.description|safe }} <!-- For some reason, rawg wraps their game descriptions in p tags. -->
-            <div id="reviews">
-                <h3>Reviews</h3>
-                <ul>
-                    <li>Metacritic: {{ game.metacritic }}</li>
-                    <li>Average User Rating: {{ game.rating }}</li>
-                    <li>Review count: {{ game.ratings_count }}</li>
-                </ul>
-            </div>
-            <div id="see-also">
-                <!-- This is a list of games that this game is a parent of (or child of). -->
-                <h3>See Also</h3>
-                <ul>
-                    {% for game in game.parent_games %}
-                        <li>
-                            <a href="{{ url_for("games.game", slug=game.slug) }}">
-                                {{ game.name }}
-                            </a>
-                        </li>
-                    {% endfor %}
-                    {% for game in game.child_games %}
-                        <li>
-                            <a href="{{ url_for("games.game", slug=game.slug) }}">
-                                {{ game.name }}
-                            </a>
-                        </li>
-                    {% endfor %}
-            </div>
-            <div id="stores">
-                <h3>Stores</h3>
-                <ul>
-                    {% for store in game.stores %}
-                        <li>
-                            <a href="https://{{ store.store.domain }}">
-                                {{ store.store.name }}
-                            </a>
-                        </li>
-                    {% endfor %}
-                </ul>
-            </div>
-        </div>
-        <div id="right">
-            <div class="banner">
-                <img src="{{ game.background_image }}" alt="<strong>{{ game.title }}</strong> background image">
             </div>
         </div>
     </section>
