Backend work and trending games

--- a/server/templates/games/index.html
+++ b/server/templates/games/index.html
@@ -31,6 +31,22 @@
                     {% endfor %}
                 {% endif %}
             </div>
+            <div id="suggested">
+                {% if trending %}
+                    <h3>Trending Games of the past year</h3>
+                    <div id="trending" class="gallery">
+                        {% for game in trending %}
+                            <div class="gallery-item" style="background-image: url('{{ game.background_image if game.background_image else "" }}')">
+                                <div class="gallery-item-details">
+                                    <a href="{{ url_for("games.game", gameId=game.id) }}">
+                                        <h2>{{ game.name }}</h2>
+                                    </a>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            </div>
         </div>
         <div id="right">
 
