--- a/server/templates/_base.html
+++ b/server/templates/_base.html
@@ -32,9 +32,11 @@
             <div>
                 <a href="{{ url_for("info.about") }}">About</a>
             </div>
-            <div>
+            <!--
+            <div>  Tests is commented out as it is not needed in production
                 <a href="{{ url_for("tests.index") }}">Tests</a>
             </div>
+            -->
         </nav>
     </div>
     <div id="header-right">
@@ -48,7 +50,9 @@
     <div id="age-modal" class="modal">
         <div class="modal-content">
             <p>Before you can access this site, we need to know your age.</p>
-            <label><input id="age-input" type="date" placeholder="Enter your date of birth."></label>
+            <div>
+                <label class="centre-flex"><input id="age-input" type="date" placeholder="Enter your date of birth."></label>
+            </div>
             <button id="age-submit">Submit</button>
         </div>
     </div>
