--- a/server/static/css/_base.css
+++ b/server/static/css/_base.css
@@ -43,9 +43,16 @@ body {
 }
 
 header {
-    min-height: 8vh;
+    height: 10vh !important;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.header-section {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
     align-items: center;
 }
 
@@ -66,7 +73,6 @@ header nav div a {
 }
 
 .school-logo {
-    max-height: 8vh;
     width: fit-content;
     display: flex;
     align-items: center;
@@ -74,7 +80,7 @@ header nav div a {
 }
 
 .school-logo img {
-    height: 7vh;
+    height: 8vh;
 }
 
 footer {
