--- a/server/templates/_base.html
+++ b/server/templates/_base.html
@@ -60,7 +60,7 @@
 </main>
 <footer>
     <div id="site-info">
-        <p><a href="https://github.com/Yuki-42/IA3/blob/master/LICENSE">Licensed</a> {{ owner }} {{ year }}</p>
+        <p><a href="https://github.com/Yuki-42/IA3/blob/master/LICENSE">Licensed</a> {{ owner.name }} {{ year }}</p>
     </div>
     <img id="footer-logo" src="{{ url_for("static", filename="img/gov-logo.svg") }}" alt="QLD Government Logo">
 </footer>
