Test css changes

--- a/server/static/css/dark_colours.css
+++ b/server/static/css/dark_colours.css
@@ -1,3 +1,4 @@
+/*
 :root {
     --primary-background: #121212;
     --secondary-background: #1c1c1c;
@@ -10,7 +11,7 @@
     --green-1: #049a49;
     --text-primary: #d4d4d4;
     --text-secondary: #000000;
-}
+}*/
 
 header {
     background: var(--secondary-background);
