--- a/server/templates/tests/developer/class.html
+++ b/server/templates/tests/developer/class.html
@@ -3,7 +3,7 @@
 {% block title %}Class Test - developer - {{ type }}{% endblock %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{{ url_for("static", filename="css/tests.css") }}">
+    <link rel="stylesheet" href="static/css/tests.css">
 {% endblock %}
 
 {% block content %}
