--- a/server/templates/games/index.html
+++ b/server/templates/games/index.html
@@ -3,7 +3,7 @@
 {% block title %}Games{% endblock %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{{ url_for("static", filename="css/games.css") }}">
+    <link rel="stylesheet" href="static/css/games.css">
 {% endblock %}
 
 {% block content %}
