--- a/server/templates/tests/publisher/index.html
+++ b/server/templates/tests/publisher/index.html
@@ -2,7 +2,7 @@
 
 {% block scripts %}
     {{ super() }}
-    <script defer src="{{ url_for("static", filename="js/tests/publisher.js") }}"></script>
+    <script defer src="static/js/tests/publisher.js"></script>
 {% endblock %}
 
 {% block apiTests %}
