--- a/server/templates/tests/_tests_base.html
+++ b/server/templates/tests/_tests_base.html
@@ -2,11 +2,11 @@
 {% block title %}{{ testType.title() }} Tests{% endblock %}
 
 {% block styles %}
-    <link rel="stylesheet" href="static/css/tests.css">
+    <link rel="stylesheet" href="/static/css/tests.css">
 {% endblock %}
 
 {% block scripts %}
-    <script defer src="static/js/tests/utils.js"></script>
+    <script defer src="/static/js/tests/utils.js"></script>
     <script defer src="https://cdn.jsdelivr.net/gh/pgrabovets/json-view@master/dist/jsonview.js"></script>
 {% endblock %}
 
