--- a/server/templates/tests/tag/index.html
+++ b/server/templates/tests/tag/index.html
@@ -2,7 +2,7 @@
 
 {% block scripts %}
     {{ super() }}
-    <script defer src="static/js/tests/tag.js"></script>
+    <script defer src="/static/js/tests/tag.js"></script>
 {% endblock %}
 
 {% block apiTests %}
