--- a/server/templates/_base.html
+++ b/server/templates/_base.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
-    <link type="text/css" rel="stylesheet" href="static/css/_base.css">
-    <script type="application/javascript" src="static/js/_base.js"></script>
+    <link type="text/css" rel="stylesheet" href="/static/css/_base.css"">
+    <script type="application/javascript" src="/static/js/_base.js"></script>
     <script type="application/javascript" src="https://kit.fontawesome.com/a7e9f794eb.js" crossorigin="anonymous"></script>
     <script type="application/javascript" src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script type="application/javascript" src="https://www.google.com/recaptcha/api.js?render=reCAPTCHA_{{ reCapchaSiteKey }}"></script>
@@ -17,7 +17,7 @@
 <header class="grid-margins">
     <div id="header-left" class="header-section">
         <div id="school-logo" class="school-logo">
-            <img src="static/img/school-logo.png" alt="School Logo">
+            <img src="/static/img/school-logo.png" alt="School Logo">
         </div>
     </div>
     <div id="header-centre" class="header-section">
@@ -39,10 +39,7 @@
         </nav>
     </div>
     <div id="header-right" class="header-section">
-        <div id="theme-selector">
-            <label for="theme-selector-checkbox">Dark Mode</label>
-            <input id="theme-selector-checkbox" type="checkbox">
-        </div>
+
     </div>
 </header>
 <main>
@@ -61,7 +58,7 @@
     <div id="site-info">
         <p><a href="https://github.com/Yuki-42/IA3/blob/master/LICENSE">Licensed</a> {{ owner.name }} {{ year }}</p>
     </div>
-    <img id="footer-logo" src="static/img/gov-logo.svg" alt="QLD Government Logo">
+    <img id="footer-logo" src="/static/img/gov-logo.svg" alt="QLD Government Logo">
 </footer>
 </body>
 </html>
