--- a/server/templates/tests/game/class.html
+++ b/server/templates/tests/game/class.html
@@ -3,7 +3,7 @@
 {% block title %}Class Test - game - {{ type }}{% endblock %}
 
 {% block styles %}
-    <link rel="stylesheet" href="static/css/tests.css">
+    <link rel="stylesheet" href="/static/css/tests.css">
 {% endblock %}
 
 {% block content %}
