Fixed age modal styling

--- a/server/static/css/_base.css
+++ b/server/static/css/_base.css
@@ -317,10 +317,10 @@ code, pre {
 
 /* Modal Content/Box */
 .modal-content {
-    background-color: #fefefe;
+    background-color: var(--secondary-background);
+    color: var(--text-primary);
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
-    border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
     display: flex;
     flex-direction: column;
